Update OpenAPI doc, add /indexes/{idOrName} route
