# assets/openapi.json
@@ -78,6 +78,56 @@
                 }
             }
         },
+        "/indexes/{idOrName}": {
+            "get": {
+                "tags": ["Main", "Users", "Organizations"],
+                "description": "Returns a `ChartIndex` for a specific user or organization.",
+                "operationId": "get_index",
+                "parameters": [
+                    {
+                        "name": "idOrName",
+                        "in": "path",
+                        "description": "Path parameter that can take a [`Name`] or [`Snowflake`] identifier.",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/schemas/NameOrSnowflake"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Helm index for the user or organization",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/responses/ApiChartIndexResponse"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "User or Organization was not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/responses/ApiErrorResponse"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/responses/ApiErrorResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/info": {
             "get": {
                 "tags": ["Main"],
@@ -319,6 +369,25 @@
                 }
             }
         },
+        "/users/@me/repositories": {
+            "put": {
+                "tags": ["Repositories"],
+                "description": "Creates a [`Repository`] with the current authenticated user as the owner of the repository.",
+                "operationId": "create_user_repository",
+                "responses": {
+                    "201": {
+                        "description": "Repository created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/responses/ApiRepositoryResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/users/login": {
             "post": {
                 "tags": ["Users", "Sessions"],
@@ -371,25 +440,6 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/responses/ApiErrorResponse"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/users/repositories": {
-            "put": {
-                "tags": ["Repositories"],
-                "description": "Creates a [`Repository`] with the current authenticated user as the owner of the repository.",
-                "operationId": "create_user_repository",
-                "responses": {
-                    "201": {
-                        "description": "Repository created",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/responses/ApiRepositoryResponse"
                                 }
                             }
                         }
@@ -573,15 +623,6 @@
                 "operationId": "list_user_repositories",
                 "parameters": [
                     {
-                        "name": "idOrName",
-                        "in": "path",
-                        "description": "Path parameter that can take a [`Name`] or [`Snowflake`] identifier.",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/components/schemas/NameOrSnowflake"
-                        }
-                    },
-                    {
                         "name": "per_page",
                         "in": "query",
                         "description": "How many elements should be present in a page.",
@@ -598,6 +639,15 @@
                         "required": false,
                         "schema": {
                             "$ref": "#/components/schemas/OrderBy"
+                        }
+                    },
+                    {
+                        "name": "idOrName",
+                        "in": "path",
+                        "description": "Path parameter that can take a [`Name`] or [`Snowflake`] identifier.",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/schemas/NameOrSnowflake"
                         }
                     },
                     {
@@ -1086,7 +1136,7 @@
             "OrderBy": {
                 "type": "string",
                 "description": "The ordering to use when querying paginated REST calls.",
-                "enum": ["ASC", "DES"]
+                "enum": ["ASC", "DESC"]
             },
             "Organization": {
                 "type": "object",
@@ -1149,12 +1199,9 @@
             "PageInfo": {
                 "type": "object",
                 "description": "Information about a [pagination][Pagination] page.",
-                "required": ["next_cursor", "prev_cursor"],
+                "required": ["cursor"],
                 "properties": {
-                    "next_cursor": {
-                        "$ref": "#/components/schemas/Snowflake"
-                    },
-                    "prev_cursor": {
+                    "cursor": {
                         "$ref": "#/components/schemas/Snowflake"
                     }
                 }
@@ -1410,6 +1457,26 @@
             }
         },
         "responses": {
+            "ApiChartIndexResponse": {
+                "description": "Response object for ChartIndexResponse",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "type": "object",
+                            "required": ["success", "data"],
+                            "properties": {
+                                "data": {
+                                    "$ref": "#/components/schemas/ChartIndex"
+                                },
+                                "success": {
+                                    "type": "boolean",
+                                    "description": "Indicates whether if this response was a success or not"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "ApiEmptyResponse": {
                 "description": "Empty response object",
                 "content": {
